# pi-setup

./: .envrc  .gitignore  .project-init  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  flake.nix  pyproject.toml
.beads/: .gitignore  README.md  config.yaml  issues.jsonl  metadata.json
.envrc.d/: uv.sh
.github/workflows/: ci.yml
.pi/plans/: 2026-06-26-documentation-coherence-evaluation.md  2026-07-01-agnt-doctor-lessons-design-plan.md  2026-07-09-live-acceptance.md  (+10 more)
docs/: AGNT-SYSTEM.md  ARCHITECTURE.md  GITHUB-ADAPTER.md  ORCHESTRATION-LOOP.md  RUN-ARTIFACTS.md  RUNNER-SERVICE.md  SELF-IMPROVEMENT-CONFIG-EVALUATION.md  SELF-IMPROVEMENT-PRINCIPLES.md  SELF-IMPROVEMENT.md
lesson-server/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
pi/: .gitignore  README.md
scripts/: bootstrap-pi-config.sh  check-pi-config.sh  eval-workflow-compliance.sh  pi-bootstrap-repair-mode.sh
tests/: conftest.py  test_agnt.py  test_approvals.py  test_bootstrap_pi_config.py  test_catalog.py  test_cli_nameerrors.py  test_context_architecture.py  test_doctor.py  test_health.py  test_instructions.py  test_lesson_server.py  test_lessons.py  test_maintenance.py  test_model_config.py  test_orchestration.py  test_orchestrator_extension.py  test_pi_packages.py  test_review.py  test_route_feedback.py  test_runner.py  test_runner_budget.py  test_runner_client.py  test_runner_protocol.py  test_runner_scheduler.py  test_runner_service.py  test_runner_visibility.py  test_startup_policy.py  test_ticket_gateway.py  test_worktree_policy.py
(+177 files in other folders)
