[project]
name = "pi-setup"
version = "0.1.0"
description = "Pi setup and agent harness configuration"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[tool.ruff.lint]
# F821 catches runtime unresolved-name regressions without treating the
# repository's deliberate script-style imports as a mass formatting migration.
select = ["F821"]
